# minefield-game

./: CMakeLists.txt
atlas/: assets.atlas  atlas.tpproj  atlas2c.py  result.c  template.c
include/: atlas.h  field.h  grf.h
res/: resource.rc
src/: atlas.c  field.c  grf.c  main.c
